adding pictures (assets)

--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ body{
     font-weight: 400;
     font-size: 54px;
     line-height: 95px;
-    text-align: justify;
+    text-align:left;
     color: #FFFFFF;
 }
 
