--- a/css/index.css
+++ b/css/index.css
@@ -5,21 +5,34 @@
     padding: 0px;
     margin: 0px;
 }
+main{
+    margin: 0%;
+    padding: 0%;
+}
 
 header {
     position: absolute;
-    height: 151px;
+    height: 161px;
     width: 100%;
     margin: 0%;
-    padding: 20px;
+    
     
 }
 #overLay{
     position: absolute;
     background-color: black;
     width: 100%;
-    height: 101px;
+    height: 131px;
     opacity: 0.6;
+}
+
+#logo {
+    margin: 0%;
+    padding: 0%;
+    width: 9%;
+    height: 6%;
+    margin-left: 5.4%;
+    margin-top: 0.5%;
 }
 
 .logo h1 {
@@ -37,7 +50,7 @@ header {
 
 nav ul {
     position: absolute;
-    top: 10%;
+    top: 16%;
     right: 5%;
     list-style-type: none;
     margin: 0;
@@ -96,6 +109,7 @@ body{
     text-align:left;
     color: #FFFFFF;
 }
+
 
 #bestSellers {
     position: absolute;
@@ -290,7 +304,11 @@ button:hover{
     opacity: 0.8;
 }
 
-
+#footerLine{
+    position: absolute;
+    margin: 5%;
+    top: 4414px;
+}
 
 .buon-appetito-all,
 .follow-us,
