--- a/css/menu.css
+++ b/css/menu.css
@@ -6,38 +6,44 @@
 
 header {
     position: absolute;
-    height: 171px;
+    height: 161px;
     width: 100%;
     margin: 0%;
-    padding: 20px;
-    z-index: 0;
 }
 
 #overLay {
     position: absolute;
     background-color: black;
     width: 100%;
-    height: 171px;
+    height: 131px;
     opacity: 0.6;
+}
+
+#logo {
+    margin: 0%;
+    padding: 0%;
+    width: 9%;
+    height: 6%;
+    margin-left: 5.4%;
+    margin-top: -0.5%;
 }
 
 .logo h1 {
     position: absolute;
     margin: 0;
-    font-size: 24px;
     font-family: 'Oswald';
     font-style: normal;
     font-weight: 400;
-    font-size: 60px;
+    font-size: 40px;
     text-align: justify;
-    padding: 16px;
+    padding: 0px;
     left: 50px;
     color: #FFFFFF;
 }
 
 nav ul {
     position: absolute;
-    top: 20%;
+    top: 16%;
     right: 5%;
     list-style-type: none;
     margin: 0;
@@ -50,7 +56,7 @@ nav ul li {
     font-family: 'Oswald';
     font-style: normal;
     font-weight: 400;
-    font-size: 60px;
+    font-size: 40px;
     text-align: justify;
     color: #FFFFFF;
 }
@@ -61,8 +67,9 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #B6B4B4;
+    color: #b6b4b4;
 }
+
 
 
 /* --------------------------------main------------------------------- */
