--- a/css/index.css
+++ b/css/index.css
@@ -15,8 +15,6 @@ header {
     height: 161px;
     width: 100%;
     margin: 0%;
-    
-    
 }
 #overLay{
     position: absolute;
@@ -77,14 +75,14 @@ nav ul {
     color: #b6b4b4;
   }
 
-body{
+  body{
     position: relative;
     background: #323232;
     margin: 0;
     padding: 0;
 }
 
-#main-background {
+  #main-background {
     position: absolute;
     width: 100%;
     height: 1280px;
@@ -110,12 +108,27 @@ body{
     color: #FFFFFF;
 }
 
+#BSL1 {
+    padding: 0%;
+    margin: 0%;
+    position: absolute;
+    top: 1392px;
+    
+}
+#BSL2 {
+    padding: 0%;
+    margin: 0%;
+    position: absolute;
+    top: 1392px;
+    left: 60%;
+    
+}
 
 #bestSellers {
     position: absolute;
     width: fit-content;
     height: 110px;
-    left: 787px;
+    left: 770px;
     top: 1330px;
     font-family: 'Oswald';
     font-style: normal;
@@ -222,6 +235,21 @@ body{
     line-height: 110px;
     color: #FFFFFF;
 } 
+
+#MS1 {
+    padding: 0%;
+    margin: 0%;
+    position: absolute; 
+    top: 2990px; 
+}
+
+#MS2 {
+    padding: 0%;
+    margin: 0%;
+    position: absolute; 
+    top: 2990px; 
+    left: 62%;
+}
 
 #menu-nav {
     position: absolute;
