--- a/css/menu.css
+++ b/css/menu.css
@@ -20,12 +20,13 @@ header {
 }
 
 #logo {
+    scale: 1.3;
     margin: 0%;
     padding: 0%;
     width: 9%;
     height: 6%;
-    margin-left: 5.4%;
-    margin-top: -0.5%;
+    margin-left: 5.25%;
+    margin-top: -0.35%;
 }
 
 .logo h1 {
