--- a/css/about-us.css
+++ b/css/about-us.css
@@ -10,14 +10,13 @@ header {
     font-style: normal;
 }
 #logo {
-    scale: 2;
     margin: 0;
     padding: 0;
-    width: 99px;
-    height: 90px;
+    width: 99.5px;
+    height: 97.5px;
     position: absolute;
-    left: 60px;
-    top: 0px;
+    left: 5.4%;
+    top: 1%;
 }
 #overLay{
     position: absolute;
@@ -26,18 +25,17 @@ header {
     height: 131px;
     opacity: 0.6;
 }
-
-header nav a:hover{
-    color: #d1cfcf;
-}
-
 header nav a {
     text-decoration: none;
     padding: 20px;
     color: white;
     font-size: 40px;
     font-weight: 400px;
-    font-family:'Oswald';
+    font-family:"Oswald";
+}
+header nav a:hover{
+    color: #bdbdbd;
+
 }
 .back-ground-img {
     display: flex;
