--- a/css/reservation.css
+++ b/css/reservation.css
@@ -9,24 +9,26 @@
 }
 
 header {
-    height: 200px;
-}
-
-header {
-    /* position: absolute; */
-    height: 151px;
+    position: absolute;
+    height: 161px;
     width: 100%;
-    margin: 0%;
-    padding: 20px;
-
 }
 
 #overLay {
     position: absolute;
     background-color: black;
     width: 100%;
-    height: 101px;
+    height: 131px;
     opacity: 0.6;
+}
+
+#logo {
+    margin: 0%;
+    padding: 0%;
+    width: 9%;
+    height: 6%;
+    margin-left: 5.4%;
+    margin-top: 0.5%;
 }
 
 .logo h1 {
@@ -44,7 +46,7 @@ header {
 
 nav ul {
     position: absolute;
-    top: 2%;
+    top: 16%;
     right: 5%;
     list-style-type: none;
     margin: 0;
@@ -79,7 +81,8 @@ nav ul li a:hover {
     top: 0px;
 
 }
-main{
+
+main {
     height: 510px;
 }
 
@@ -227,7 +230,6 @@ main{
 
 .footer {
     height: 100px;
-    border-top: solid 3px black;
 
 }
 
@@ -241,7 +243,9 @@ main{
     display: flex;
     flex-direction: row;
     flex-grow: 1;
-    padding: 30px;
+    padding-top: 80px;
+    padding-right: 30px;
+    padding-left: 30px;
     gap: 20px;
     font-size: 25px;
     width: 100%;
@@ -250,6 +254,7 @@ main{
     color: white;
 
 }
+
 /* .footer {
     display: flex;
     flex-direction: row;
